chore: remove google cdn & token

--- a/client/index.html
+++ b/client/index.html
@@ -9,21 +9,21 @@
     <meta name="referrer" content="origin">
     <meta name="description" content="Yonela Johannes's web development and design portfolio website. View recent projects and connect with my on my socials or contact me directly.">
     <meta name="keywords" content="Web Development, Coding, Software Development, Web Developer, Web Design, Portfolio">
-    <meta name="title" content="Yonela Johannes software developer portfolio">
+    <meta name="title" content="Yonela Johannes software developer website">
     <link rel="icon" type="image/svg+xml" href="./logo.png">
     <link rel="stylesheet" href="/src/index.css">
     <link href='https://fonts.gstatic.com/' crossorigin='anonymous' rel='preconnect' />
 
     <!-- Social Media Meta Tags -->
     <meta property="og:image" content="./logo.png" />
-    <meta property="og:title" content="Yonela Johannes, React, React Native and Web Developer" />
+    <meta property="og:title" content="Yonela Johannes" />
     <meta property="og:description" content="Yonela Johannes's web development and design portfolio website. View recent projects and connect with my on my socials or contact me directly.">
     <meta property="og:url" content="codingwithyonela.vercel.app">
     <meta property="og:type" content="website" />
-    <meta property="og:image:alt" content="Yonela's Johannes Porfolio" />
-    <meta property="og:site_name" content="Yonela Johannes | Personal Portfolio" />
+    <meta property="og:image:alt" content="Yonela Johannes" />
+    <meta property="og:site_name" content="Yonela Johannes | Personal Blog" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Yonela Johannes, React, React Native and Web Developer">
+    <meta name="twitter:title" content="Yonela Johannes">
     <meta name="twitter:description" content="Yonela Johannes's web development and design portfolio website. View recent projects and connect with my on my socials or contact me directly.">
     <meta name="twitter:image" content="./logo.png" />
     <meta name="author" content="Yonela Johannes" />
@@ -31,7 +31,6 @@
     <meta name="designer" content="Yonela Johannes" />
     <meta name="publisher" content="Yonela Johannes" />
     <meta name="owner" content="Yonela Johannes">
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
