feat: meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -5,32 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="./logo.png">
     <title>CodingWithYonela</title>
-    <meta name="author" content="Yonela Johannes">
+    <meta name="author" content="CodingWithYonela">
     <meta name="referrer" content="origin">
-    <meta name="description" content="Yonela Johannes's web development and design portfolio website. View recent projects and connect with my on my socials or contact me directly.">
-    <meta name="keywords" content="Web Development, Coding, Software Development, Web Developer, Web Design, Portfolio">
-    <meta name="title" content="Yonela Johannes software developer website">
+    <meta name="description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth.">
+    <meta name="keywords" content="project management, collaboration, community building, task tracking, idea sharing, project collaboration, communication hub, dynamic workspaces, creative solutions, team collaboration, online collaboration, project tracking, digital community">
+    <meta name="title" content="CodingWithYonela software developer website">
     <link rel="icon" type="image/svg+xml" href="./logo.png">
     <link rel="stylesheet" href="/src/index.css">
     <link href='https://fonts.gstatic.com/' crossorigin='anonymous' rel='preconnect' />
 
     <!-- Social Media Meta Tags -->
     <meta property="og:image" content="./logo.png" />
-    <meta property="og:title" content="Yonela Johannes" />
-    <meta property="og:description" content="Yonela Johannes's web development and design portfolio website. View recent projects and connect with my on my socials or contact me directly.">
+    <meta property="og:title" content="CodingWithYonela" />
+    <meta property="og:description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth.">
     <meta property="og:url" content="codingwithyonela.vercel.app">
     <meta property="og:type" content="website" />
-    <meta property="og:image:alt" content="Yonela Johannes" />
-    <meta property="og:site_name" content="Yonela Johannes | Personal Blog" />
+    <meta property="og:image:alt" content="CodingWithYonela" />
+    <meta property="og:site_name" content="CodingWithYonela" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Yonela Johannes">
-    <meta name="twitter:description" content="Yonela Johannes's web development and design portfolio website. View recent projects and connect with my on my socials or contact me directly.">
+    <meta name="twitter:title" content="CodingWithYonela">
+    <meta name="twitter:description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth.">
     <meta name="twitter:image" content="./logo.png" />
-    <meta name="author" content="Yonela Johannes" />
-    <meta name="creator" content="Yonela Johannes" />
-    <meta name="designer" content="Yonela Johannes" />
-    <meta name="publisher" content="Yonela Johannes" />
-    <meta name="owner" content="Yonela Johannes">
+    <meta name="author" content="CodingWithYonela" />
+    <meta name="creator" content="CodingWithYonela" />
+    <meta name="designer" content="CodingWithYonela" />
+    <meta name="publisher" content="CodingWithYonela" />
+    <meta name="owner" content="CodingWithYonela">
   </head>
   <body>
     <div id="root"></div>
