--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/logo.png"/>
     <title>CodingWithYonela</title>
-    <meta name="author" content="CodingWithYonela">
-    <meta name="referrer" content="origin">
-    <meta name="description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth.">
-    <meta name="keywords" content="project management, collaboration, community building, task tracking, idea sharing, project collaboration, communication hub, dynamic workspaces, creative solutions, team collaboration, online collaboration, project tracking, digital community">
+    <meta name="author" content="CodingWithYonela" />
+    <meta name="referrer" content="origin" />
+    <meta name="description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth." />
+    <meta name="keywords" content="project management, collaboration, community building, task tracking, idea sharing, project collaboration, communication hub, dynamic workspaces, creative solutions, team collaboration, online collaboration, project tracking, digital community" />
     <meta name="title" content="CodingWithYonela software developer website">
     <link rel="icon" type="image/svg+xml" href="/logo.png">
     <link rel="stylesheet" href="/src/index.css">
@@ -17,20 +17,20 @@
     <!-- Social Media Meta Tags -->
     <meta property="og:image" content="/logo.png" />
     <meta property="og:title" content="CodingWithYonela" />
-    <meta property="og:description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth.">
-    <meta property="og:url" content="https://codingwithyonela.vercel.app">
+    <meta property="og:description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth." />
+    <meta property="og:url" content="https://codingwithyonela.vercel.app" />
     <meta property="og:type" content="website" />
     <meta property="og:image:alt" content="CodingWithYonela" />
     <meta property="og:site_name" content="CodingWithYonela" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CodingWithYonela">
-    <meta name="twitter:description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth.">
+    <meta name="twitter:title" content="CodingWithYonela" />
+    <meta name="twitter:description" content="A dynamic platform for project management, collaboration, and community building. Track projects, share ideas, and connect with like-minded individuals—all in one space designed to empower your creativity and growth." />
     <meta name="twitter:image" content="/logo.png" />
     <meta name="author" content="CodingWithYonela" />
     <meta name="creator" content="CodingWithYonela" />
     <meta name="designer" content="CodingWithYonela" />
     <meta name="publisher" content="CodingWithYonela" />
-    <meta name="owner" content="CodingWithYonela">
+    <meta name="owner" content="CodingWithYonela" />
   </head>
   <body>
     <div id="root"></div>
